--- a/app/src/main/res/layout/activity_cust.xml
+++ b/app/src/main/res/layout/activity_cust.xml
@@ -10,6 +10,7 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_cust"
         android:layout_width="match_parent"
+        android:paddingTop="4dp"
         android:layout_height="55dp"
         android:background="@android:color/white"
         app:layout_constraintTop_toTopOf="parent"
