--- a/app/src/main/res/layout/fragment_cust_detail_trip.xml
+++ b/app/src/main/res/layout/fragment_cust_detail_trip.xml
@@ -151,25 +151,6 @@
                     app:layout_constraintStart_toEndOf="@id/iv_person_outline"
                     android:layout_marginStart="4dp" />
 
-                <ImageView
-                    android:id="@+id/iv_calendar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    app:layout_constraintStart_toEndOf="@id/tv_trip_location"
-                    android:src="@drawable/ic_calendar_24_black" />
-
-                <TextView
-                    android:id="@+id/tv_date_trip"
-                    android:layout_width="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="end"
-                    android:text="DD/MM/YYYY"
-                    android:layout_marginStart="4dp"
-                    app:layout_constraintStart_toEndOf="@id/tv_trip_availability"
-                    android:textColor="@color/green_primary" />
-
             </LinearLayout>
 
 
@@ -293,6 +274,34 @@
                     style="?attr/borderlessButtonStyle" />
             </LinearLayout>
 
+            <!-- Trip Schedule -->
+            <TextView
+                android:id="@+id/tv_trip_schedule_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Jadwal Trip"
+                android:textStyle="bold"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@id/ll_partner_info"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_deperature_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="3 Hari Perjalanan\nBerangkat\t: Senin, 12 Desember 2022 \t(08:00)\nKembali\t\t\t: Rabu, 14 Desember 2022 \t(17:00)"
+                android:textSize="12sp"
+                app:layout_constraintTop_toBottomOf="@id/tv_trip_schedule_header"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <LinearLayout
+                android:id="@+id/ll_trip_schedule"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="2dp"
+                app:layout_constraintTop_toBottomOf="@id/tv_deperature_date">
+            </LinearLayout>
 
             <!-- Inclusion and Exclusion -->
             <TextView
@@ -302,7 +311,7 @@
                 android:text="Inclusion and Exclusion"
                 android:textStyle="bold"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/ll_partner_info"
+                app:layout_constraintTop_toBottomOf="@id/ll_trip_schedule"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <LinearLayout
@@ -331,26 +340,6 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <!-- Trip Schedule -->
-            <TextView
-                android:id="@+id/tv_trip_schedule_header"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Jadwal Trip"
-                android:textStyle="bold"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/ll_inclusion_exclusion"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <LinearLayout
-                android:id="@+id/ll_trip_schedule"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="2dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_trip_schedule_header">
-            </LinearLayout>
-
             <!-- FAQ -->
             <TextView
                 android:id="@+id/tv_faq_header"
@@ -359,7 +348,7 @@
                 android:text="FAQ"
                 android:textStyle="bold"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/ll_trip_schedule"
+                app:layout_constraintTop_toBottomOf="@id/ll_inclusion_exclusion"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <LinearLayout
