--- a/app/src/main/res/layout/fragment_cust_ticket_list.xml
+++ b/app/src/main/res/layout/fragment_cust_ticket_list.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".ui.cust.ticket.AcceptedFragment">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewOrders"
         android:layout_width="match_parent"
